--- a/views/bio.haml
+++ b/views/bio.haml
@@ -1,8 +1,9 @@
-%img{ :src=>"/images/bg_sectionIndex.png", :border=>"0", :usemap=>"#Map2"}
-%map{ :name=>"Map2", :id=>"Map2"}
-  %area{ :shape=>"rect", :coords=>"109,196,249,225", :href=>"/cv_odi_bazo_2010.pdf", :target=>"_blank", :alt=>"download cv+"}
-  %area{ :shape=>"rect", :coords=>"109,267,212,280", :href=>"mailto:odibazo@gmail.com", :alt=>"odibazo@gmail.com"}
-  %area{ :shape=>"rect", :coords=>"109,295,238,307", :href=>"http://www.odibazo.com", :target=>"_blank", :alt=>"www.odibazo.com"}
-  %area{ :shape=>"rect", :coords=>"109,306,320,317", :href=>"http://www.flickr.com/photos/odibazo", :target=>"_blank", :alt=>"www.flickr.com/photos/odibazo"}
-  %area{ :shape=>"rect", :coords=>"109,317,286,327", :href=>"http://www.youtube.com/odibazo", :target=>"_blank", :alt=>"www.youtube.com/odibazo"}
-  %area{ :shape=>"rect", :coords=>"109,326,286,337", :href=>"http://www.quierocreer.tumblr.com", :target=>"_blank", :alt=>"www.quierocreer.tumblr.com"}
+#bio
+  #links
+    %a{ :href=>"mailto:odibazo@gmail.com", :id=>"linkmail", :class=>"link"}
+    %br
+    %a{ :target=>"_blank", :href=>"http://www.odibazo.com", :id=>"linkpage", :class=>"link"}
+    %a{ :target=>"_blank", :href=>"http://www.flickr.com/photos/odibazo", :id=>"linkflickr", :class=>"link"}
+    %a{ :target=>"_blank", :href=>"http://www.youtube.com/odibazo", :id=>"linkyou", :class=>"link"}
+    %a{ :target=>"_blank", :href=>"http://quierocreer.com", :id=>"linktumb", :class=>"link"}
+    %a{ :target=>"_blank", :href=>"", :id=>"phone", :class=>"link"}
