--- a/views/bio.haml
+++ b/views/bio.haml
@@ -1,4 +1,6 @@
 #bio
+  #cv
+    %a{ :href=>"/cv_odi_bazo_2010.pdf", :id=>"linkcv"}
   #links
     %a{ :href=>"mailto:odibazo@gmail.com", :id=>"linkmail", :class=>"link"}
     %br
